--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <style>
     * {
       margin: 0;
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Roboto', sans-serif
     }
   </style>
   <title>React App</title>
